@@ -1,19 +1,71 @@
+// Works with Gradle 5.7 and Java 12
+
+// To run this do:
+// ./gradlew run
+
+// To build a distribution zip:
+// ./gradlew distZip
+
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+targetCompatibility = 11
+
+version = '0.0.1'
+group = 'ehu.isad'
+
+java {
+    modularity.inferModulePath.set(true)
+}
+
+application {
+    mainModule = 'javafx' // name defined in module-info.java
+    mainClass = 'ehu.isad.Main'
+}
+
+
+
+// ext.moduleName = 'gradlejavafxhelloworld'
+mainClassName = "$moduleName/ehu.isad.EurovisionEIB"
+
+
+javafx {
+    version = "12"
+    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls','javafx.swing']
+}
+
+
+dependencies {
+    // This dependency is used by the application.
+    implementation 'com.google.guava:guava:29.0-jre'
+
+    // Use JUnit test framework
+    testImplementation 'junit:junit:4.13'
+
+    //Mysql-workbench
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+}
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
+
+run {
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        jvmArgs = jvmArgs.plus(newArgs)
+        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
+                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
+                                '--module', "$mainClassName",
+        ])
+        classpath = files()
+    }
 }
 
-test {
-    useJUnitPlatform()
-}
